updating gpu devices
mps device updates for apple silicon support

--- a/environment.yaml
+++ b/environment.yaml
@@ -1,21 +1,27 @@
-name: ldm
+##
+## Latent Difusion Model - Apple Silicon
+##
+name: ldm-as
 channels:
   - pytorch
   - defaults
+  - conda-forge
 dependencies:
-  - python=3.8.5
+  - python=3.9
   - pip=20.3
-  - cudatoolkit=11.3
+  # cudatoolkit         ## no longer supported for macOS, can't find it.
   - pytorch=1.11.0
   - torchvision=0.12.0
-  - numpy=1.19.2
+  - numpy=1.19.5
+  - rust
+  - git
   - pip:
     - albumentations==0.4.3
     - diffusers
-    - opencv-python==4.1.2.30
+    - opencv-python==4.7.0.72
     - pudb==2019.2
     - invisible-watermark
-    - imageio==2.9.0
+    - imageio==2.27
     - imageio-ffmpeg==0.4.2
     - pytorch-lightning==1.4.2
     - omegaconf==2.1.1
@@ -26,6 +32,8 @@ dependencies:
     - transformers==4.19.2
     - torchmetrics==0.6.0
     - kornia==0.6
-    - -e git+https://github.com/CompVis/taming-transformers.git@master#egg=taming-transformers
-    - -e git+https://github.com/openai/CLIP.git@main#egg=clip
+    # These aren't installing for me off of the script, so I had to do them by hand. 
+    # I cloned them to /extras and then did pip install -e . in each of them. 
+    - "--editable=git+https://github.com/openai/CLIP.git@main#egg=clip"
+    - "--editable=git+https://github.com/CompVis/taming-transformers.git@master#egg=taming-transformers"
     - -e .
